@@ -1,3 +1,10 @@
+2020-05-29 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/ralloc2.cc,
+	  src/pdk/gen.c,
+	  support/regression/tests/bug-3007.c:
+	  Improve jump-on-decrement.
+
 2020-05-29 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/hc08/atomic_flag_test_and_set.c: fix warning
